Notification dropdown toggle on navbar has wrong colour when clicked due to previous fix.

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -27,13 +27,13 @@ $bootstrap-lg: 1200px;
   border-bottom: 1px solid $colour-info-bg;
 }
 
-.btn:hover {
+.pageContent .btn:hover {
   color: black !important;
   background-color: #fff !important;
   border-color: #204d74 !important;
 }
 
-.btn-white:hover {
+.pageContent .btn-white:hover {
   color:  white !important;
   background-color: $color-blue--light !important;
   border-color: #204d74 !important;
